# hello-world-docker

./: CMakeLists.txt  Dockerfile  Dockerfile.debug  README.md  docker-compose.yml  hellodocker  hellodocker-debug  main.cpp
.github/workflows/: build.yml  ci-cd-docker.yml
tests/: db_test.cpp
